Changed routing back, changed web.config to have less security for testing

--- a/BleReaderWebService/Web.config
+++ b/BleReaderWebService/Web.config
@@ -18,7 +18,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" />
+    <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" maxRequestLength="102400" />
     <pages validateRequest="false" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpModules>
@@ -37,6 +37,11 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <security>
+      <requestFiltering allowDoubleEscaping="true" >
+        <requestLimits maxAllowedContentLength="104857600" />
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
